@@ -2,49 +2,47 @@ package com.hufsphere.linkboard.service;
 
 import com.hufsphere.linkboard.domain.SourceConnection;
 import com.hufsphere.linkboard.domain.SourceType;
+import com.hufsphere.linkboard.domain.Workspace;
 import com.hufsphere.linkboard.dto.request.SourceConnectionCreateRequest;
 import com.hufsphere.linkboard.dto.response.SourceConnectionResponse;
-import com.hufsphere.linkboard.exception.WorkspaceNotFoundException;
+import com.hufsphere.linkboard.dto.response.SourceSyncResponse;
 import com.hufsphere.linkboard.repository.SourceConnectionRepository;
 import com.hufsphere.linkboard.repository.WorkspaceRepository;
-import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDateTime;
+import java.util.List;
+import java.util.stream.Collectors;
+
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class SourceConnectionService {
 
-    private final WorkspaceRepository workspaceRepository;
     private final SourceConnectionRepository sourceConnectionRepository;
+    private final WorkspaceRepository workspaceRepository;
 
     @Transactional
-    public SourceConnectionResponse connectSource(Long workspaceId, SourceConnectionCreateRequest request) {
-        if (!workspaceRepository.existsById(workspaceId)) {
-            throw new WorkspaceNotFoundException("워크스페이스를 찾을 수 없거나 소스에 접근할 수 없습니다");
-        }
+    public SourceConnectionResponse createConnection(Long workspaceId, SourceConnectionCreateRequest request) {
+        Workspace workspace = workspaceRepository.findById(workspaceId)
+                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 워크스페이스입니다."));
 
-        SourceType sourceType = SourceType.fromValue(request.getSourceType());
-
-        SourceConnection sourceConnection = SourceConnection.builder()
-                .workspaceId(workspaceId)
-                .sourceType(sourceType)
-                .sourceRef(request.getSourceRef())
+        SourceConnection connection = SourceConnection.builder()
+                .workspace(workspace)
+                .sourceType(SourceType.valueOf(request.getSourceType()))
+                .targetRepoOrBoard(request.getTargetRepoOrBoard())
+                .status("CONNECTED")
                 .build();
 
-        SourceConnection saved = sourceConnectionRepository.save(sourceConnection);
-        return SourceConnectionResponse.from(saved);
+        SourceConnection saved = sourceConnectionRepository.save(connection);
+        return SourceConnectionResponse.of(saved);
     }
 
-    @Transactional(readOnly = true)
-    public List<SourceConnectionResponse> getSources(Long workspaceId) {
-        if (!workspaceRepository.existsById(workspaceId)) {
-            throw new WorkspaceNotFoundException("워크스페이스를 찾을 수 없습니다");
-        }
-
-        return sourceConnectionRepository.findByWorkspaceIdOrderByCreatedAtAsc(workspaceId).stream()
-                .map(SourceConnectionResponse::from)
-                .toList();
+    public List<SourceConnectionResponse> getConnections(Long workspaceId) {
+        return sourceConnectionRepository.findByWorkspaceId(workspaceId).stream()
+                .map(SourceConnectionResponse::of)
+                .collect(Collectors.toList());
     }
 }
